--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,14 +37,13 @@
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
 	"[vue]": {
-		"editor.defaultFormatter": "johnsoncodehk.volar"
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
 	"terminal.integrated.tabs.enabled": true,
 	"[typescriptreact]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
-	"vue3snippets.enable-compile-vue-file-on-did-save-code": false,
-	"editor.formatOnSave": false,
+	"editor.formatOnSave": true,
 	"material-icon-theme.activeIconPack": "angular",
 	"material-icon-theme.files.associations": {},
 	"material-icon-theme.folders.associations": {
