feat: add router guard

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
 			"@/*": ["./src/*"],
 			"~/*": ["./*"]
 		},
-		"types": ["node","unplugin-icons/types/vue","naive-ui/volar"]
+		"types": ["node","naive-ui/volar"]
 	}
 }
