--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@antv/g2plot": "^2.4.10",
     "@better-scroll/core": "^2.4.2",
+    "@vicons/ionicons5": "^0.12.0",
     "@vueuse/core": "^8.0.0",
     "axios": "^0.26.1",
     "clipboard": "^2.0.10",
@@ -39,10 +40,7 @@
     "pinia": "^2.0.11",
     "print-js": "^1.6.0",
     "qs": "^6.10.3",
-    "soybean-admin-layout": "^1.0.4",
-    "soybean-admin-tab": "^1.2.3",
     "swiper": "^8.0.7",
-    "typescript-cookie": "^1.0.3",
     "ua-parser-js": "^1.0.2",
     "vditor": "^3.8.12",
     "vue": "^3.2.31",
@@ -53,8 +51,6 @@
     "@amap/amap-jsapi-types": "^0.0.8",
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
-    "@iconify/json": "^2.1.14",
-    "@iconify/vue": "^3.1.4",
     "@types/bmapgl": "^0.0.5",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^17.0.21",
@@ -77,14 +73,11 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
     "lint-staged": "^12.3.5",
-    "mockjs": "^1.1.0",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.5.1",
     "rollup-plugin-visualizer": "^5.6.0",
-    "sass": "^1.49.9",
     "typescript": "~4.6.2",
-    "unplugin-icons": "^0.13.3",
     "unplugin-vue-components": "^0.18.0",
     "vite": "2.8.6",
     "vite-plugin-html": "^3.1.0",
