--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "dayjs": "^1.10.8",
     "form-data": "^4.0.0",
     "lodash-es": "^4.17.21",
+    "naive-ui": "^2.27.0",
     "pinia": "^2.0.11",
     "print-js": "^1.6.0",
     "qs": "^6.10.3",
     "swiper": "^8.0.7",
+    "tailwindcss": "^3.0.23",
     "ua-parser-js": "^1.0.2",
     "vditor": "^3.8.12",
     "vue": "^3.2.31",
