--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ stats.html
 /cypress/screenshots/
 
 # Editor directories and files
+.VSCodeCounter
 .vscode/*
 !.vscode/extensions.json
 !.vscode/settings.json
