--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "dayjs": "^1.10.8",
     "form-data": "^4.0.0",
     "lodash-es": "^4.17.21",
+    "markdown-it-anchor": "^8.6.2",
+    "markdown-it-toc-done-right": "^4.2.0",
     "naive-ui": "^2.27.0",
     "pinia": "^2.0.11",
     "print-js": "^1.6.0",
@@ -46,6 +48,7 @@
     "vditor": "^3.8.12",
     "vue": "^3.2.31",
     "vue-router": "^4.0.14",
+    "vue3-markdown-it": "^1.0.10",
     "wangeditor": "^4.7.12"
   },
   "devDependencies": {
