--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash-es": "^4.17.21",
     "markdown-it-anchor": "^8.6.2",
     "markdown-it-toc-done-right": "^4.2.0",
+    "markdown-it-vue": "^1.1.7",
     "naive-ui": "^2.27.0",
     "pinia": "^2.0.11",
     "print-js": "^1.6.0",
