--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^0.26.1",
     "clipboard": "^2.0.10",
     "colord": "^2.9.2",
+    "compressorjs": "^1.1.1",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.10.8",
     "form-data": "^4.0.0",
