--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -21,8 +21,11 @@ jobs:
     steps:
       # check out the repository
       - name: Checkout
-        uses: actions/checkout@v2 #这里使用了github官方提供的action,checkout项目到虚拟机上
-
+        uses: actions/checkout@v3 #这里使用了github官方提供的action,checkout项目到虚拟机上
+      - name: Install Node.js, NPM
+        uses: actions/setup-node@@v3.1.1
+        with:
+          node-version: 16
       - name: Install Dependencies
         run: npm install
       - name: Build
@@ -33,6 +36,6 @@ jobs:
         with:
           username: 'root' #ssh user name
           server: '${{ secrets.SERVER_HOST }}' #引用之前创建好的secret
-          ssh_private_key: ${{ secrets.SSH_SSH_KEY }} #引用之前创建好的secret
+          ssh_private_key: ${{ secrets.npY }} #引用之前创建好的secret
           local_path: './dist/*' # 对应我们项目build的文件夹路径
           remote_path: '/var/projects/rainforest'
