--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@antv/g2plot": "^2.4.10",
     "@better-scroll/core": "^2.4.2",
+    "@types/three": "^0.141.0",
     "@vicons/ionicons5": "^0.12.0",
     "@vueuse/core": "^8.0.0",
     "axios": "^0.26.1",
@@ -44,6 +45,7 @@
     "print-js": "^1.6.0",
     "qs": "^6.10.3",
     "tailwindcss": "^3.0.23",
+    "three": "^0.141.0",
     "ua-parser-js": "^1.0.2",
     "vditor": "^3.8.12",
     "vue": "^3.2.31",
