--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,6 @@
 		"directive": "tools",
 		"directives": "tools",
 		"business": "core"
-	}
+	},
+	"vue3snippets.enable-compile-vue-file-on-did-save-code": false
 }
