--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "rainforest-fronthead",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "cross-env VITE_ENV_TYPE=dev vite",
     "dev:test": "cross-env VITE_ENV_TYPE=test vite",
     "dev:prod": "cross-env VITE_ENV_TYPE=prod vite",
-    "build": "cross-env VITE_ENV_TYPE=prod vite build",
+    "build": "npm run typecheck && cross-env VITE_ENV_TYPE=prod vite build",
     "build:dev": "npm run typecheck && cross-env VITE_ENV_TYPE=dev vite build",
     "build:test": "npm run typecheck && cross-env VITE_ENV_TYPE=test vite build",
     "build:vercel": "cross-env VITE_HASH_ROUTE=true vite build",
